# NitroForge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  Version.txt  main.py  requirements.txt  sidecar.spec
.github/workflows/: ci.yml  pages.yml
app/: index.html  overlay.html  package.json  vite.config.ts
app/src/: App.tsx  api.ts  index.css  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: lib.rs
app/src/components/: Gauge.tsx  Sidebar.tsx  ui.tsx  (+1 more)
core/: booster.py  bottleneck.py  config.py  crash_reporter.py  db.py  fps_monitor.py  game_catalog.py  game_scanner.py  logger.py  network_utils.py  power_utils.py  process_utils.py  resolution_utils.py  system_info.py  tweaks.py
core/data/: game_catalog.json
desktop/: README.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  api.ts  index.css  main.tsx  overlay-main.tsx
desktop/src-tauri/: Cargo.toml  installer-hooks.nsh  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: ARCHITECTURE.md  BUILDING.md  DISCORD_INTEGRATION.md  WEBSITE.md
overlay/: fps_overlay_window.py
scripts/: build.ps1  open-website.ps1
sidecar/: server.py
ui/: analytics_tab.py  booster_tab.py  bottleneck_tab.py  dashboard_tab.py  games_tab.py  logs_tab.py  overlay_tab.py  resolution_tab.py  specs_tab.py  taskmanager_tab.py  theme.py
website/: index.html  privacy.html  support.html  terms.html
website/css/: style.css
website/js/: main.js
(+23 files in other folders)
