[package]
name = "nitro-forge"
version = "2.0.1"
description = "Nitro Forge - game-focused PC optimizer"
authors = ["TRB Studios"]
edition = "2021"

[lib]
name = "nitro_forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"

[profile.release]
# Smaller, faster shell: link-time optimization, one codegen unit, stripped.
lto = true
codegen-units = 1
strip = true
